Improved AnalysisService